Implement player repeat pages and result pages
