# server/api/Services/IBoardService.cs
@@ -6,8 +6,12 @@ namespace api.Services;
 public interface IBoardService
 {
     Task<List<BoardDtoResponse>> GetByUserAsync(string userId);
-    Task<List<BoardDtoResponse>> CreateBetsAsync(string userId, IEnumerable<CreateBoardRequest> dtos);
+    Task<List<BoardDtoResponse>> CreatePurchaseAsync(string userId, IEnumerable<CreateBoardRequest> dtos);
     Task<List<AdminBoardDtoResponse>> GetAllBoardsForAdminAsync();
-    
     Task<List<WeeklyBoardSummaryDto>> GetWeeklyWinningSummaryAsync();
+    Task<AutoRepeatResponse> SetAutoRepeatAsync(string playerId, string boardId, bool autoRepeat);
+
+    // run when winning numbers are selected (game "starts")
+    Task ProcessRepeatOrdersForGameAsync(string gameId);
+    Task<IsBoardLockedResponse> GetIsBoardLockedAsync();
 }
