# server/api/dtos/Responses/IsBoardLockedResponse.cs
@@ -1,0 +1,9 @@
+namespace api.dtos.Responses;
+
+public class IsBoardLockedResponse
+{
+    public bool IsOpen { get; set; }
+    public string? Message { get; set; }
+    public int Year { get; set; }
+    public int WeekNumber { get; set; }
+}
