# server/efscaffold/Entities/Board.cs
@@ -23,6 +23,8 @@ public partial class Board
 
     public bool? Iswinner { get; set; }
 
+    public bool AutoRepeat { get; set; }
+
     public virtual Game? Game { get; set; }
 
     public virtual User? Player { get; set; }
